# ai-journey

./: .gitignore  README.md  requirements.txt
leetcode/: 1_valid_palindrome125.py
notes/: Conda_Guide.txt  daily_gemini_prompt.txt  git-master-cheatsheet.html
notion template/: AI_HQ_Master_Tracker.md  AI_ML_Daily_Tracker_Notion.md  AI_ML_Resource_Library_Notion.md  AI_ML_Roadmap_Notion.md
phase-1-python/: python_warmup.ipynb
phase-1-python/day-15/: args_kwargs.py  stats.py  twosums_LC.py
phase-1-python/day-16/: challenge1.py  dict.py  generator.py  yield.py
phase-1-python/day-17/: context_practice.py  decorator.py  firstclass_clossures.py  logger&timer.py  practice.py  timer.py
phase-1-python/day-18/: Data_Processor.py  OOP3.py  OOP4_1.py  OOP5.py
phase-1-python/day-19/: error_handling.py  gym_log.csv  meet_capture.py  practise.py
phase-1-python/day-20/: practise2.py
phase-1-python/day-22/: fancy_indexing.py  kaggle_exercises.ipynb  numpy_arrays_atttributes.py  numpy_fundamentals.py  slicing.py
phase-1-python/day-23/: broadcasting.py  element_wise.py  transformation.py
phase-1-python/day-24/: random_sampling.py  solving_equation.py  speed_test.py
phase-1-python/day-26/: example.ipynb  inspect_function.py
phase-1-python/day-27/: grouping.py  map_apply.py  merge.py  practice.py
phase-1-python/day-28/: EDA_notebook.ipynb  matlpotlib_functions.py  practice1.py  seabornintro.py
phase-1-python/day-36/modern_package_project/: pyproject.toml  test_modern.py
phase-1-python/day-36/modern_package_project/my_modern_tools/: string_magic.py
(+166 files in other folders)
